<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
android:background="@drawable/aboutlauout"
     >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/amd"
        android:id="@+id/textView2"
        android:layout_marginTop="62dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:focusableInTouchMode="false"
        android:textStyle="bold|italic"
        android:textColor="#ff1a34" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/def"
        android:id="@+id/textView3"
        android:layout_marginTop="46dp"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:textStyle="bold|italic"
        android:textColor="#9ab8ff"
        />

    <TextView
        android:text="@string/aasada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textColor="#9ab8ff"
        android:layout_marginLeft="13dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="36dp"
        android:layout_below="@+id/textView3"
        android:layout_toRightOf="@+id/textView2"
        android:layout_toEndOf="@+id/textView2" />

    <TextView
        android:text="@string/member1"
        android:textColor="#9ab8ff"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:id="@+id/textView5"
        android:layout_below="@+id/textView"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView" />

    <TextView
        android:text="@string/member2"
        android:textColor="#9ab8ff"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:id="@+id/textView6"
        android:layout_below="@+id/textView5"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView" />

    <TextView
        android:text="@string/member3"
        android:textColor="#9ab8ff"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"
        android:layout_alignRight="@+id/textView5"
        android:layout_alignEnd="@+id/textView5"
        android:layout_marginTop="15dp"
        android:id="@+id/textView7" />

    <TextView
        android:text="@string/member4"
        android:textColor="#9ab8ff"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView5"
        android:layout_alignRight="@+id/textView2"
        android:layout_alignEnd="@+id/textView2"
        android:layout_marginRight="30dp"
        android:layout_marginEnd="30dp"
        android:id="@+id/textView8" />

    <TextView
        android:text="@string/member5"
        android:textColor="#9ab8ff"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView9"
        android:layout_above="@+id/textView7"
        android:layout_alignRight="@+id/textView8"
        android:layout_alignEnd="@+id/textView8" />

</RelativeLayout>